fix: show pointer cursor on icons in buttons/links
Previous style rule made it so icons were shown with the default cursor,
which looks strange in the middle of an element that otherwise uses a
pointer cursor.

See: 86c53c9d90d8b7b6b48bde7fcf0df849989cec0f

--- a/static/styles.css
+++ b/static/styles.css
@@ -78,6 +78,16 @@ button:has(> .material-icons) {
   gap: 0.25em;
 }
 
+[role="button"] .material-icons,
+[type="button"] .material-icons,
+[type="reset"] .material-icons,
+[type="submit"] .material-icons,
+button .material-icons,
+a .material-icons,
+a.material-icons {
+  cursor: pointer;
+}
+
 [role="button"],
 [type="button"],
 [type="file"]::file-selector-button,
